--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Daniel Españadero",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
     "colors": "^1.4.0",
     "dotenv": "^12.0.3",
-    "inquirer": "^8.2.0"
+    "inquirer": "^8.2.0",
+    "node": "^17.3.1"
   }
 }
